--- a/kubernetes/apps/base/envoy-gateway-system/eg/gateway/kustomization.yaml
+++ b/kubernetes/apps/base/envoy-gateway-system/eg/gateway/kustomization.yaml
@@ -5,5 +5,6 @@ kind: Kustomization
 namespace: envoy-gateway-system
 resources:
   - certificate.yaml
+  - external.yaml
   - gatewayclass.yaml
   - internal.yaml
