--- a/kubernetes/apps/base/kube-system/cilium/gateway/kustomization.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/gateway/kustomization.yaml
@@ -5,6 +5,6 @@ kind: Kustomization
 namespace: kube-system
 resources:
   - certificate.yaml
-  - external.yaml
+  # - external.yaml
   # - internal.yaml
   - redirect.yaml
