--- a/kubernetes/apps/base/kube-system/cilium/gateway/kustomization.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/gateway/kustomization.yaml
@@ -3,8 +3,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: kube-system
-resources:
-  - certificate.yaml
+# resources:
+  # - certificate.yaml
   # - external.yaml
   # - internal.yaml
   # - redirect.yaml
