added backend ref for flux webhook

--- a/kubernetes/apps/base/flux-system/addons/webhooks/httproute.yaml
+++ b/kubernetes/apps/base/flux-system/addons/webhooks/httproute.yaml
@@ -12,3 +12,12 @@ spec:
     - name: external
       namespace: envoy-gateway-system
       sectionName: https
+  rules:
+    - backendRefs:
+        - name: webhook-receiver
+          namespace: flux-system
+          port: 80
+      matches:
+        - path:
+            type: PathPrefix
+            value: /
