updated receiver secret name

--- a/kubernetes/apps/base/flux-system/addons/webhooks/receiver.yaml
+++ b/kubernetes/apps/base/flux-system/addons/webhooks/receiver.yaml
@@ -11,5 +11,5 @@ spec:
       name: flux-system
       namespace: flux-system
   secretRef:
-    name: webhook-token
+    name: github-webhook-token
   type: github
