consolidate envoy gateway into network namespace and make naming more clear

--- a/kubernetes/apps/base/flux-system/addons/webhooks/httproute.yaml
+++ b/kubernetes/apps/base/flux-system/addons/webhooks/httproute.yaml
@@ -10,7 +10,7 @@ spec:
     - flux-webhook.themacdonald.house
   parentRefs:
     - name: external
-      namespace: envoy-gateway-system
+      namespace: network
       sectionName: https
   rules:
     - backendRefs:
