--- a/kubernetes/apps/base/network/envoy-gateway/app/helmrelease.yaml
+++ b/kubernetes/apps/base/network/envoy-gateway/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: eg
+  name: envoy-gateway
 spec:
   chartRef:
     kind: OCIRepository
@@ -17,6 +17,3 @@ spec:
     cleanupOnFail: true
     remediation:
       retries: 3
-  valuesFrom:
-    - kind: ConfigMap
-      name: eg-values
