--- a/kubernetes/apps/base/network/envoy-gateway/gateway/gatewayclass.yaml
+++ b/kubernetes/apps/base/network/envoy-gateway/gateway/gatewayclass.yaml
@@ -3,6 +3,6 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: GatewayClass
 metadata:
-  name: eg
+  name: envoy-gateway
 spec:
   controllerName: gateway.envoyproxy.io/gatewayclass-controller
