--- a/kubernetes/apps/base/network/envoy-gateway/gateway/internal.yaml
+++ b/kubernetes/apps/base/network/envoy-gateway/gateway/internal.yaml
@@ -3,15 +3,15 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: external
+  name: internal
   annotations:
-    external-dns.alpha.kubernetes.io/target: &hostname external.themacdonald.house
+    external-dns.alpha.kubernetes.io/target: &hostname internal.themacdonald.house
 spec:
-  gatewayClassName: eg
+  gatewayClassName: envoy-gateway
   infrastructure:
     annotations:
       external-dns.alpha.kubernetes.io/hostname: *hostname
-      io.cilium/lb-ipam-ips: 192.168.0.181
+      io.cilium/lb-ipam-ips: 192.168.0.180
   listeners:
     - allowedRoutes:
         namespaces:
