define events for webhook receiver

--- a/kubernetes/apps/base/flux-system/addons/webhooks/receiver.yaml
+++ b/kubernetes/apps/base/flux-system/addons/webhooks/receiver.yaml
@@ -6,6 +6,9 @@ metadata:
   name: github-webhook
   namespace: flux-system
 spec:
+  events:
+    - ping
+    - push
   resources:
     - kind: GitRepository
       name: flux-system
