--- a/kubernetes/apps/base/flux-system/addons/ks.yaml
+++ b/kubernetes/apps/base/flux-system/addons/ks.yaml
@@ -24,6 +24,10 @@ metadata:
   name: addons-secrets
   namespace: flux-system
 spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   interval: 30m
   path: ./kubernetes/apps/base/flux-system/addons/secrets
   prune: true
