created cluster specific configuration for modularity

--- a/kubernetes/apps/base/flux-system/addons/webhooks/httproute.yaml
+++ b/kubernetes/apps/base/flux-system/addons/webhooks/httproute.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: flux-system
 spec:
   hostnames:
-    - flux-webhook.themacdonald.house
+    - 'flux-webhook.${CLUSTER_DOMAIN}'
   parentRefs:
     - name: external
       namespace: network
