--- a/kubernetes/apps/base/observability/kube-prometheus-stack/app/values.yaml
+++ b/kubernetes/apps/base/observability/kube-prometheus-stack/app/values.yaml
@@ -13,7 +13,7 @@ prometheus:
     main:
       enabled: true
       hostnames:
-        - prometheus.themacdonald.house
+        - 'prometheus.${CLUSTER_DOMAIN}'
       parentRefs:
         - name: internal
           namespace: network
