--- a/kubernetes/apps/base/network/envoy-gateway/gateway/certificate.yaml
+++ b/kubernetes/apps/base/network/envoy-gateway/gateway/certificate.yaml
@@ -3,13 +3,13 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: themacdonald-house
+  name: ${CLUSTER_DOMAIN_SLUG}
 spec:
-  commonName: themacdonald.house
+  commonName: ${CLUSTER_DOMAIN}
   dnsNames:
-    - "themacdonald.house"
-    - "*.themacdonald.house"
+    - ${CLUSTER_DOMAIN}
+    - '*.${CLUSTER_DOMAIN}'
   issuerRef:
     kind: ClusterIssuer
     name: letsencrypt-production
-  secretName: themacdonald-house-tls
+  secretName: '${CLUSTER_DOMAIN_SLUG}-tls'
