added more post build substitutions

--- a/kubernetes/apps/base/network/external-dns/ks.yaml
+++ b/kubernetes/apps/base/network/external-dns/ks.yaml
@@ -8,6 +8,10 @@ metadata:
 spec:
   interval: 30m
   path: ./kubernetes/apps/base/network/external-dns/cloudflare
+  postBuild:
+    substituteFrom:
+      - kind: ConfigMap
+        name: cluster-config
   prune: true
   retryInterval: 1m
   sourceRef:
@@ -26,6 +30,10 @@ metadata:
 spec:
   interval: 30m
   path: ./kubernetes/apps/base/network/external-dns/pihole
+  postBuild:
+    substituteFrom:
+      - kind: ConfigMap
+        name: cluster-config
   prune: true
   retryInterval: 1m
   sourceRef:
