--- a/kubernetes/apps/base/network/envoy-gateway/ks.yaml
+++ b/kubernetes/apps/base/network/envoy-gateway/ks.yaml
@@ -26,6 +26,10 @@ metadata:
 spec:
   interval: 30m
   path: ./kubernetes/apps/base/network/envoy-gateway/gateway
+  postBuild:
+    substituteFrom:
+      - kind: ConfigMap
+        name: cluster-config
   prune: true
   retryInterval: 1m
   sourceRef:
