--- a/kubernetes/apps/base/observability/kube-prometheus-stack/ks.yaml
+++ b/kubernetes/apps/base/observability/kube-prometheus-stack/ks.yaml
@@ -8,6 +8,10 @@ metadata:
 spec:
   interval: 30m
   path: ./kubernetes/apps/base/observability/kube-prometheus-stack/app
+  postBuild:
+    substituteFrom:
+      - kind: ConfigMap
+        name: cluster-config
   prune: true
   retryInterval: 1m
   sourceRef:
