--- a/kubernetes/clusters/home/ks.yaml
+++ b/kubernetes/clusters/home/ks.yaml
@@ -6,8 +6,18 @@ metadata:
   name: cluster
   namespace: flux-system
 spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   interval: 10m
   path: ./kubernetes/apps/home
+  postBuild:
+    substituteFrom:
+      - kind: ConfigMap
+        name: cluster-config
+      - kind: Secret
+        name: cluster-secrets
   prune: true
   sourceRef:
     kind: GitRepository
@@ -15,3 +25,15 @@ spec:
     namespace: flux-system
   timeout: 30m
   wait: false
+  patches:
+    # Add SOPS decryption to all children
+    - patch: |-
+        apiVersion: kustomize.toolkit.fluxcd.io/v1
+        kind: Kustomization
+        metadata:
+          name: not-used
+        spec:
+          decryption:
+            provider: sops
+            secretRef:
+              name: sops-age
