--- a/kubernetes/clusters/home/ks.yaml
+++ b/kubernetes/clusters/home/ks.yaml
@@ -37,3 +37,6 @@ spec:
             provider: sops
             secretRef:
               name: sops-age
+      target:
+        group: kustomize.toolkit.fluxcd.io
+        kind: Kustomization
