added reflector to allow specific secrets and config maps to exist in multiple namespaces

--- a/kubernetes/apps/home/kustomization.yaml
+++ b/kubernetes/apps/home/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ../base/flux-system/addons/ks.yaml
   - ../base/kube-system
   - ../base/kube-system/cilium/ks.yaml
+  - ../base/kube-system/reflector/ks.yaml
   - ../base/network
   - ../base/network/cloudflared/ks.yaml
   - ../base/network/envoy-gateway/ks.yaml
