--- a/kubernetes/clusters/home/ks.yaml
+++ b/kubernetes/clusters/home/ks.yaml
@@ -25,18 +25,17 @@ spec:
     namespace: flux-system
   timeout: 30m
   wait: false
-  # patches:
+  patches:
     # Add SOPS decryption to all children
-    # - patch: |-
-    #     apiVersion: kustomize.toolkit.fluxcd.io/v1
-    #     kind: Kustomization
-    #     metadata:
-    #       name: not-used
-    #     spec:
-    #       decryption:
-    #         provider: sops
-    #         secretRef:
-    #           name: sops-age
-    #   target:
-    #     group: kustomize.toolkit.fluxcd.io
-    #     kind: Kustomization
+    - patch: |-
+        apiVersion: kustomize.toolkit.fluxcd.io/v1
+        kind: Kustomization
+        metadata:
+          name: not-used
+        spec:
+          decryption:
+            provider: sops
+            secretRef:
+              name: sops-age
+      target:
+        labelSelector: decryption.flux/enabled=true
