added substitution to necessary kustomizations using patch

--- a/kubernetes/apps/base/network/envoy-gateway/ks.yaml
+++ b/kubernetes/apps/base/network/envoy-gateway/ks.yaml
@@ -23,6 +23,8 @@ kind: Kustomization
 metadata:
   name: envoy-gateway-gateway
   namespace: network
+  labels:
+    substitution.flux/enabled: true
 spec:
   interval: 30m
   path: ./kubernetes/apps/base/network/envoy-gateway/gateway
