--- a/kubernetes/apps/base/flux-system/addons/ks.yaml
+++ b/kubernetes/apps/base/flux-system/addons/ks.yaml
@@ -43,6 +43,8 @@ kind: Kustomization
 metadata:
   name: addons-webhooks
   namespace: flux-system
+  labels:
+    substitution.flux/enabled: true
 spec:
   interval: 30m
   path: ./kubernetes/apps/base/flux-system/addons/webhooks
