--- a/kubernetes/apps/base/network/external-dns/ks.yaml
+++ b/kubernetes/apps/base/network/external-dns/ks.yaml
@@ -5,6 +5,8 @@ kind: Kustomization
 metadata:
   name: external-dns-cloudflare
   namespace: network
+  labels:
+    substitution.flux/enabled: true
 spec:
   interval: 30m
   path: ./kubernetes/apps/base/network/external-dns/cloudflare
@@ -23,6 +25,8 @@ kind: Kustomization
 metadata:
   name: external-dns-pihole
   namespace: network
+  labels:
+    substitution.flux/enabled: true
 spec:
   interval: 30m
   path: ./kubernetes/apps/base/network/external-dns/pihole
