--- a/kubernetes/apps/base/observability/grafana/ks.yaml
+++ b/kubernetes/apps/base/observability/grafana/ks.yaml
@@ -5,6 +5,8 @@ kind: Kustomization
 metadata:
   name: grafana
   namespace: observability
+  labels:
+    substitution.flux/enabled: true
 spec:
   interval: 30m
   path: ./kubernetes/apps/base/observability/grafana/app
