--- a/kubernetes/clusters/home/ks.yaml
+++ b/kubernetes/clusters/home/ks.yaml
@@ -26,7 +26,7 @@ spec:
   timeout: 30m
   wait: false
   patches:
-    # Add SOPS decryption to all children
+    # Add SOPS decryption to specific children
     - patch: |-
         apiVersion: kustomize.toolkit.fluxcd.io/v1
         kind: Kustomization
@@ -39,3 +39,18 @@ spec:
               name: sops-age
       target:
         labelSelector: decryption.flux/enabled=true
+    # Add post build substitution to specific children
+    - patch: |-
+        apiVersion: kustomize.toolkit.fluxcd.io/v1
+        kind: Kustomization
+        metadata:
+          name: not-used
+        spec:
+          postBuild:
+            substituteFrom:
+              - kind: ConfigMap
+                name: cluster-config
+              - kind: Secret
+                name: cluster-secrets
+      target:
+        labelSelector: substitution.flux/enabled=true
