added kustomize-mutating-webhook for global cluster configuration

--- a/kubernetes/apps/base/flux-system/addons/repositories/helm/kustomization.yaml
+++ b/kubernetes/apps/base/flux-system/addons/repositories/helm/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - cilium.yaml
   - emberstack.yaml
   - external-dns.yaml
+  - fluxcd-kustomize-mutating-webhook.yaml
   - jetstack.yaml
   - prometheus-community.yaml
   - tailscale.yaml
