--- a/bootstrap/helmfile.yaml
+++ b/bootstrap/helmfile.yaml
@@ -16,3 +16,20 @@ releases:
     needs: ['flux-system/flux-operator']
     values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/clusters/{{ requiredEnv "CLUSTER" }}/flux-system/flux-instance/app/values.yaml']
     version: 0.19.0
+  - chart: jetstack/cert-manager
+    name: cert-manager
+    namespace: security
+    needs: ['flux-system/flux-instance']
+    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/base/security/cert-manager/app/values.yaml']
+    version: 1.17.2
+  - chart: fluxcd-kustomize-mutating-webhook/kustomize-mutating-webhook
+    name: kustomize-mutating-webhook
+    namespace: flux-system
+    needs: ['security/cert-manager']
+    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/clusters/{{ requiredEnv "CLUSTER" }}/flux-system/kustomize-mutating-webhook/app/values.yaml']
+    version: 0.4.3
+repositories:
+  - name: fluxcd-kustomize-mutating-webhook
+    url: https://xunholy.github.io/fluxcd-kustomize-mutating-webhook
+  - name: jetstack
+    url: https://charts.jetstack.io
