changed kustomize-mutating-webhook logs to debug

--- a/kubernetes/clusters/home/flux-system/kustomize-mutating-webhook/app/values.yaml
+++ b/kubernetes/clusters/home/flux-system/kustomize-mutating-webhook/app/values.yaml
@@ -2,6 +2,8 @@
 configMaps:
   - create: false
     name: cluster-config
+env:
+  LOG_LEVEL: debug
 secrets:
   - create: false
     name: cluster-secrets
