added specific postBuild to webhook kustomization

--- a/kubernetes/apps/base/flux-system/addons/ks.yaml
+++ b/kubernetes/apps/base/flux-system/addons/ks.yaml
@@ -46,6 +46,10 @@ metadata:
 spec:
   interval: 30m
   path: ./kubernetes/apps/base/flux-system/addons/webhooks
+  postBuild:
+    substituteFrom:
+      - kind: ConfigMap
+        name: cluster-config
   prune: true
   retryInterval: 1m
   sourceRef:
