--- a/kubernetes/clusters/home/flux-system/addons/config/cluster-secrets.sops.yaml
+++ b/kubernetes/clusters/home/flux-system/addons/config/cluster-secrets.sops.yaml
@@ -3,21 +3,21 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  CLUSTER_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:Ondo6w==,iv:TsPYcFOtTPPATjKH05uRNeMcxO5X3i3qdqrWX6/GDMs=,tag:v7z1/BLtVUmU5EZBwLdl9A==,type:str]
-  CLUSTER_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:/8Abd8O8yK5S,iv:8RULdt+xEtPRLQFoO5qLXsO3idp541BNw8bDTTnlLRw=,tag:4ylJ+Qi/ZgBUpZZIBy0fVA==,type:str]
+  CLUSTER_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:RXK4fnY=,iv:EMLa7Rss1xSZ25+HfYdiZIT0I5zBjL8mR/4QdZiiaA4=,tag:O/a+mqVLgdq0pW3VhS/Wgw==,type:str]
+  CLUSTER_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:WyocYe9qZsnN,iv:n8+akEjn5EeY31AP0CQfTylKuSDdkEm1B60+MnabNf0=,tag:zsNKBMmrbTYjayFfKTDLqw==,type:str]
 sops:
   age:
     - recipient: age1uz35yjytjahj2nydce709njxklnd89ahchtn7xcpvcje3z7zeftqfqsqhu
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZZXlmUjhyZTQ2aXNkTE01
-        eFVGOGMvYTJFNGZEcXMxTXEvckptdHExd2k4CkIyUERzN0NnZ3dIU09wZHI2UFBD
-        ODZpMzdFcGRQeHpWenZwNlgyRDJDbTAKLS0tIHFpUklwSHlpL2FWRythUXdxQkJ3
-        eFM5UWhtOUovQUlWU3JSTkdKbkZsUmsK43TWj38kjbJcP59noQJzp7tb5ygpvNei
-        yipMdWbRYuGdxApMp7BvrNdhHgRhrjT4HpQBtISsN2jJh+P0Fu5rIA==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1V2tNWlVncEc2ckJpVUF5
+        U3VsUXNUczIxLytZb2p0c21iMkd6L2pCWVVJCjh6WWl3UkV3Z3ptMi9BSUFpMFcy
+        dXQyWFZLQ3ZtY0liUDlpT2Y4OGExdnMKLS0tIDZFMkIrcWc5NE4reld3QksyRGRO
+        MVpNYkRUeG9SdWtVRmZ3YTMvZXRYRDAKjtOYhjfdMHMz1/dOO5sQbzS6okDijQM+
+        zP9YB1V9PauDMO4Aha6gHJFWRmEfA442btwKqz/FV+72H+ybj4sj/Q==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-05-26T04:42:44Z"
-  mac: ENC[AES256_GCM,data:Sh8IMuiuO9ftdx29UzvfLERj0nnTseVYVDLa9hn3AMttZmNEKhEBkjuPICkiTfN6DIrCutowEfJCdzl7IfXfp5OSRRAX2w46gBP4k0K2fGlF0PD47J3N59Igay60McseBqYBC6A50Tdjnr5txXe09DPNVia+Le+zV4NTc4OTO0o=,iv:w27Tv82MzH9GqGoSXmi2e7nia2aGRNC5WyPPLKozqXo=,tag:xN793kGiFwKYyHesrPgI+w==,type:str]
+  lastmodified: "2025-05-26T12:55:41Z"
+  mac: ENC[AES256_GCM,data:KYOXab9HQdbzY5ir7ASyUUUrNpedSU0dpAuAf+sc2U/fB/32Kv/qE/i/0ABma9eFisoGKpa8FXV/r74lhGw06G4ODSXePxocWUiBsOsoBYwg+9UxcWan7e3g6OzgsvyURQQeVZi5Hwuxh9WMwLREcqWpA4VIdJ6WnQ+HEoOD2rg=,iv:kk3pkrn68PuLD+LChv8yaD7rDGh2/bIUSChqPOPey7I=,tag:dU/OZy2VIT7goivYS9+CEQ==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.10.2
