test changing grafana admin user

--- a/kubernetes/clusters/home/flux-system/addons/config/cluster-secrets.sops.yaml
+++ b/kubernetes/clusters/home/flux-system/addons/config/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  CLUSTER_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:RXK4fnY=,iv:EMLa7Rss1xSZ25+HfYdiZIT0I5zBjL8mR/4QdZiiaA4=,tag:O/a+mqVLgdq0pW3VhS/Wgw==,type:str]
+  CLUSTER_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:g2u89g==,iv:TQkxzkGOoVjZJHXUivg/IkFSdn1tOWMMwoadW3LIuJg=,tag:VqVqwAqTwmhiiHMM8Q9pyA==,type:str]
   CLUSTER_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:WyocYe9qZsnN,iv:n8+akEjn5EeY31AP0CQfTylKuSDdkEm1B60+MnabNf0=,tag:zsNKBMmrbTYjayFfKTDLqw==,type:str]
 sops:
   age:
@@ -16,8 +16,8 @@ sops:
         MVpNYkRUeG9SdWtVRmZ3YTMvZXRYRDAKjtOYhjfdMHMz1/dOO5sQbzS6okDijQM+
         zP9YB1V9PauDMO4Aha6gHJFWRmEfA442btwKqz/FV+72H+ybj4sj/Q==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-05-26T12:55:41Z"
-  mac: ENC[AES256_GCM,data:KYOXab9HQdbzY5ir7ASyUUUrNpedSU0dpAuAf+sc2U/fB/32Kv/qE/i/0ABma9eFisoGKpa8FXV/r74lhGw06G4ODSXePxocWUiBsOsoBYwg+9UxcWan7e3g6OzgsvyURQQeVZi5Hwuxh9WMwLREcqWpA4VIdJ6WnQ+HEoOD2rg=,iv:kk3pkrn68PuLD+LChv8yaD7rDGh2/bIUSChqPOPey7I=,tag:dU/OZy2VIT7goivYS9+CEQ==,type:str]
+  lastmodified: "2025-05-26T13:07:21Z"
+  mac: ENC[AES256_GCM,data:98tFhcmIiF7LGJSoWrVkJO0dO0wWQGoGcx/O6xb6n05iYJwBM6zg9j9eUBdZ/9czlBlk9+TRKl6rgDDuxi2DVw+TZJ7PczWbXDUGAJ0i4xrEtuDAjF87/4WzJ9YW0AEfk5xQdF7/1NNoiBOMs0QQ+Qsh4GL6z8speYX3XqY9S0c=,iv:YiDuNDKEK6L10bf5VoCdinY6xE/3/A9A35P0pV+Nw34=,tag:clQobognE/kxXFYoBLFetA==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.10.2
