temporarily set default grafana admin user

--- a/kubernetes/apps/base/observability/grafana/app/values.yaml
+++ b/kubernetes/apps/base/observability/grafana/app/values.yaml
@@ -1,6 +1,6 @@
 ---
 adminPassword: ${CLUSTER_GRAFANA_ADMIN_PASSWORD}
-adminUser: ${CLUSTER_GRAFANA_ADMIN_USER}
+# adminUser: ${CLUSTER_GRAFANA_ADMIN_USER}
 dashboardProviders:
   dashboardproviders.yaml:
     apiVersion: 1
