add sops decryption to flux-system

--- a/kubernetes/clusters/home/flux-system/flux-instance/app/values.yaml
+++ b/kubernetes/clusters/home/flux-system/flux-instance/app/values.yaml
@@ -11,6 +11,23 @@ instance:
     - source-controller
   distribution:
     version: 2.5.1
+  kustomize:
+    patches:
+      # Add SOPS decryption to flux-system
+      - patch: |
+          apiVersion: v1
+          kind: Kustomization
+          metadata:
+            name: flux-system
+            namespace: flux-system
+          spec:
+            decryption:
+              provider: sops
+              secretRef:
+                name: sops-age
+        target:
+          kind: Kustomization
+          name: flux-system
   sync:
     kind: GitRepository
     path: kubernetes/clusters/home
