--- a/kubernetes/clusters/home/secrets/cluster-config.yaml
+++ b/kubernetes/clusters/home/secrets/cluster-config.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cluster-config
+  namespace: flux-system
 data:
   CLUSTER_CLOUDFLARED_TUNNEL_ID: dd2ed101-be34-4dce-b05e-f1a7ba896200
   CLUSTER_DOMAIN: themacdonald.house
