--- a/kubernetes/clusters/home/secrets/cluster-secrets.sops.yaml
+++ b/kubernetes/clusters/home/secrets/cluster-secrets.sops.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: cluster-secrets
+  namespace: flux-system
 stringData:
   CLUSTER_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:g2u89g==,iv:TQkxzkGOoVjZJHXUivg/IkFSdn1tOWMMwoadW3LIuJg=,tag:VqVqwAqTwmhiiHMM8Q9pyA==,type:str]
   CLUSTER_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:WyocYe9qZsnN,iv:n8+akEjn5EeY31AP0CQfTylKuSDdkEm1B60+MnabNf0=,tag:zsNKBMmrbTYjayFfKTDLqw==,type:str]
