--- a/kubernetes/clusters/oci/secrets/cluster-secrets.sops.yaml
+++ b/kubernetes/clusters/oci/secrets/cluster-secrets.sops.yaml
@@ -4,6 +4,7 @@ metadata:
   name: cluster-secrets
   namespace: flux-system
 stringData:
+  CLUSTER_DOMAIN: ENC[AES256_GCM,data:eDoh5lvZkA0xlgOXrIWH6Q==,iv:gSe2Tyz7RWnOJgeb4vlWQtN5McvB4Qt9lJN6IdX3AW4=,tag:8x0MTgBcmX5bITncVAuZrQ==,type:str]
   CLUSTER_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:g2u89g==,iv:TQkxzkGOoVjZJHXUivg/IkFSdn1tOWMMwoadW3LIuJg=,tag:VqVqwAqTwmhiiHMM8Q9pyA==,type:str]
   CLUSTER_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:WyocYe9qZsnN,iv:n8+akEjn5EeY31AP0CQfTylKuSDdkEm1B60+MnabNf0=,tag:zsNKBMmrbTYjayFfKTDLqw==,type:str]
 sops:
@@ -17,8 +18,8 @@ sops:
         MVpNYkRUeG9SdWtVRmZ3YTMvZXRYRDAKjtOYhjfdMHMz1/dOO5sQbzS6okDijQM+
         zP9YB1V9PauDMO4Aha6gHJFWRmEfA442btwKqz/FV+72H+ybj4sj/Q==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-05-26T13:07:21Z"
-  mac: ENC[AES256_GCM,data:98tFhcmIiF7LGJSoWrVkJO0dO0wWQGoGcx/O6xb6n05iYJwBM6zg9j9eUBdZ/9czlBlk9+TRKl6rgDDuxi2DVw+TZJ7PczWbXDUGAJ0i4xrEtuDAjF87/4WzJ9YW0AEfk5xQdF7/1NNoiBOMs0QQ+Qsh4GL6z8speYX3XqY9S0c=,iv:YiDuNDKEK6L10bf5VoCdinY6xE/3/A9A35P0pV+Nw34=,tag:clQobognE/kxXFYoBLFetA==,type:str]
+  lastmodified: "2025-06-01T06:12:59Z"
+  mac: ENC[AES256_GCM,data:xPnGO6g67IGZY81sKxdI0PyT5Wdz5SDdPQGNoelsgqammrgQy3qm7iJhkmT5CYHPKlHQUwZpIS8KNfBcshih8SNI/DR5BLeynjjSFOCDekEXPwCNcUBMz7Guw5EGq0H5uUgnFnw5CKQEHvZCYkfYxN3Gvuf7HszKAhHuczvi/vA=,iv:jVpuHKZAmBudGPKcxwrhoN+GtQgAJ12+kKdSZNvQErw=,tag:k11rAVmYmVU7YjDtMomSnA==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.10.2
