--- a/kubernetes/apps/base/flux-system/addons/ks.yaml
+++ b/kubernetes/apps/base/flux-system/addons/ks.yaml
@@ -21,26 +21,6 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: addons-secrets
-  namespace: flux-system
-  labels:
-    decryption.flux/enabled: true
-spec:
-  interval: 30m
-  path: ./kubernetes/apps/base/flux-system/addons/secrets
-  prune: true
-  retryInterval: 1m
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-    namespace: flux-system
-  timeout: 3m
-  wait: true
----
-# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
   name: addons-webhooks
   namespace: flux-system
 spec:
@@ -50,6 +30,8 @@ spec:
     substituteFrom:
       - kind: ConfigMap
         name: cluster-config
+      - kind: Secret
+        name: cluster-secrets
   prune: true
   retryInterval: 1m
   sourceRef:
