added CLUSTER_DOMAIN_SLUG to oci cluster secrets

--- a/kubernetes/clusters/oci/secrets/cluster-secrets.sops.yaml
+++ b/kubernetes/clusters/oci/secrets/cluster-secrets.sops.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: flux-system
 stringData:
   CLUSTER_DOMAIN: ENC[AES256_GCM,data:eDoh5lvZkA0xlgOXrIWH6Q==,iv:gSe2Tyz7RWnOJgeb4vlWQtN5McvB4Qt9lJN6IdX3AW4=,tag:8x0MTgBcmX5bITncVAuZrQ==,type:str]
+  CLUSTER_DOMAIN_SLUG: ENC[AES256_GCM,data:OIYz7OdkQqCqWH4MkLLjOg==,iv:4bDqI2WCRWylqjx6cbAEGBgzkKVn/gMrJ2LJWNvG688=,tag:rTaIW/8TTwr8ALOoHe+9bw==,type:str]
   CLUSTER_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:g2u89g==,iv:TQkxzkGOoVjZJHXUivg/IkFSdn1tOWMMwoadW3LIuJg=,tag:VqVqwAqTwmhiiHMM8Q9pyA==,type:str]
   CLUSTER_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:WyocYe9qZsnN,iv:n8+akEjn5EeY31AP0CQfTylKuSDdkEm1B60+MnabNf0=,tag:zsNKBMmrbTYjayFfKTDLqw==,type:str]
 sops:
@@ -18,8 +19,8 @@ sops:
         MVpNYkRUeG9SdWtVRmZ3YTMvZXRYRDAKjtOYhjfdMHMz1/dOO5sQbzS6okDijQM+
         zP9YB1V9PauDMO4Aha6gHJFWRmEfA442btwKqz/FV+72H+ybj4sj/Q==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-06-01T06:12:59Z"
-  mac: ENC[AES256_GCM,data:xPnGO6g67IGZY81sKxdI0PyT5Wdz5SDdPQGNoelsgqammrgQy3qm7iJhkmT5CYHPKlHQUwZpIS8KNfBcshih8SNI/DR5BLeynjjSFOCDekEXPwCNcUBMz7Guw5EGq0H5uUgnFnw5CKQEHvZCYkfYxN3Gvuf7HszKAhHuczvi/vA=,iv:jVpuHKZAmBudGPKcxwrhoN+GtQgAJ12+kKdSZNvQErw=,tag:k11rAVmYmVU7YjDtMomSnA==,type:str]
+  lastmodified: "2025-06-01T12:23:57Z"
+  mac: ENC[AES256_GCM,data:OHdftblz2wH3Qhw7iuibHXThOR4RGCtGg55WlDj4au/qiL0nQO0wjPARKVLJO2/DfZZh9VqjbrEdhUroZUD5jsXvWdnyLuNkejUN4e97B5CIdd2/J4NlmWuf0oZ9dFPp7nyx+Awh0+w6b3n2ED29FKzCthUpLSbD5V8ZKael5Lg=,iv:w4jRRznBjgDwJVV95FcNYnZmtRysrR9cq9dfPJG0YLY=,tag:9VPyrXtm1Ffr/LNpNw7Pow==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.10.2
