create custom cert-manager instance for oci

--- a/kubernetes/apps/oci/kustomization.yaml
+++ b/kubernetes/apps/oci/kustomization.yaml
@@ -13,4 +13,5 @@ resources:
   # - ../base/network/envoy-gateway/ks.yaml
   - ./network/envoy-gateway/ks.yaml
   - ../base/security
-  - ../base/security/cert-manager/ks.yaml
+  # - ../base/security/cert-manager/ks.yaml
+  - ./security/cert-manager/ks.yaml
