--- a/kubernetes/apps/oci/security/cert-manager/app/clusterissuer.yaml
+++ b/kubernetes/apps/oci/security/cert-manager/app/clusterissuer.yaml
@@ -12,7 +12,13 @@ spec:
     solvers:
       - dns01:
           route53:
+            accessKeyIDSecretRef:
+              key: access_key
+              name: cert-manager-route53
             region: ap-southeast-2
+            secretAccessKeySecretRef:
+              key: secret_key
+              name: cert-manager-route53
         selector:
           dnsZones:
             - ${CLUSTER_DOMAIN}
