added external-dns to oci cluster

--- a/kubernetes/apps/oci/kustomization.yaml
+++ b/kubernetes/apps/oci/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - ../base/network
   # - ../base/network/envoy-gateway/ks.yaml
   - ./network/envoy-gateway/ks.yaml
+  - ./network/external-dns/ks.yaml
   - ../base/security
   # - ../base/security/cert-manager/ks.yaml
   - ./security/cert-manager/ks.yaml
