added metrics-server to oci cluster

--- a/kubernetes/apps/base/flux-system/addons/repositories/helm/kustomization.yaml
+++ b/kubernetes/apps/base/flux-system/addons/repositories/helm/kustomization.yaml
@@ -9,5 +9,6 @@ resources:
   - external-dns.yaml
   - fluxcd-kustomize-mutating-webhook.yaml
   - jetstack.yaml
+  - metrics-server.yaml
   - prometheus-community.yaml
   - tailscale.yaml
