--- a/kubernetes/apps/oci/kustomization.yaml
+++ b/kubernetes/apps/oci/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - ../base/kube-system
   # - ../base/kube-system/cilium/ks.yaml
   - ./kube-system/cilium/ks.yaml
+  - ../base/kube-system/metrics-server/ks.yaml
   - ../base/kube-system/reflector/ks.yaml
   - ../base/network
   # - ../base/network/envoy-gateway/ks.yaml
