added openebs to oci cluster

--- a/kubernetes/apps/base/flux-system/addons/repositories/helm/kustomization.yaml
+++ b/kubernetes/apps/base/flux-system/addons/repositories/helm/kustomization.yaml
@@ -10,5 +10,6 @@ resources:
   - fluxcd-kustomize-mutating-webhook.yaml
   - jetstack.yaml
   - metrics-server.yaml
+  - openebs.yaml
   - prometheus-community.yaml
   - tailscale.yaml
