--- a/kubernetes/apps/base/storage/openebs/app/helmrelease.yaml
+++ b/kubernetes/apps/base/storage/openebs/app/helmrelease.yaml
@@ -21,3 +21,6 @@ spec:
     cleanupOnFail: true
     remediation:
       retries: 3
+  valuesFrom:
+    - kind: ConfigMap
+      name: openebs-values
