--- a/kubernetes/apps/base/storage/openebs/app/kustomization.yaml
+++ b/kubernetes/apps/base/storage/openebs/app/kustomization.yaml
@@ -3,5 +3,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: storage
+configMapGenerator:
+  - name: openebs-values
+    files:
+      - values.yaml=./values.yaml
+configurations:
+  - kustomizeconfig.yaml
 resources:
   - helmrelease.yaml
