--- a/kubernetes/apps/base/storage/openebs/app/storageclass.yaml
+++ b/kubernetes/apps/base/storage/openebs/app/storageclass.yaml
@@ -3,7 +3,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: zfs
+  name: openebs-zfspv
 allowVolumeExpansion: true
 parameters:
   compression: lz4
