installed cloudnative-pg in oci cluster

--- a/kubernetes/apps/base/flux-system/addons/repositories/helm/kustomization.yaml
+++ b/kubernetes/apps/base/flux-system/addons/repositories/helm/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 namespace: flux-system
 resources:
   - cilium.yaml
+  - cloudnative-pg.yaml
   - emberstack.yaml
   - external-dns.yaml
   - fluxcd-kustomize-mutating-webhook.yaml
