created basic postgres v17 cluster

--- a/kubernetes/apps/base/database/cloudnative-pg/ks.yaml
+++ b/kubernetes/apps/base/database/cloudnative-pg/ks.yaml
@@ -16,3 +16,21 @@ spec:
     namespace: flux-system
   timeout: 3m
   wait: true
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cloudnative-pg-cluster
+  namespace: database
+spec:
+  interval: 30m
+  path: ./kubernetes/apps/base/database/cloudnative-pg/cluster
+  prune: true
+  retryInterval: 1m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  timeout: 3m
+  wait: true
