added external-secrets to oci cluster

--- a/kubernetes/apps/base/flux-system/addons/repositories/helm/kustomization.yaml
+++ b/kubernetes/apps/base/flux-system/addons/repositories/helm/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - cloudnative-pg.yaml
   - emberstack.yaml
   - external-dns.yaml
+  - external-secrets.yaml
   - fluxcd-kustomize-mutating-webhook.yaml
   - jetstack.yaml
   - metrics-server.yaml
