--- a/kubernetes/apps/oci/kustomization.yaml
+++ b/kubernetes/apps/oci/kustomization.yaml
@@ -19,5 +19,6 @@ resources:
   - ../base/security
   # - ../base/security/cert-manager/ks.yaml
   - ./security/cert-manager/ks.yaml
+  - ../base/security/external-secrets/ks.yaml
   - ../base/storage
   - ../base/storage/openebs/ks.yaml
