added self signed CA via cert-manager

--- a/kubernetes/apps/oci/security/cert-manager/app/kustomization.yaml
+++ b/kubernetes/apps/oci/security/cert-manager/app/kustomization.yaml
@@ -10,6 +10,7 @@ configurations:
   - kustomizeconfig.yaml
 namespace: security
 resources:
-  - clusterissuer.yaml
   - helmrelease.yaml
+  - letsencrypt.yaml
   - secret.sops.yaml
+  - selfsigned.yaml
