fixed self signed issuer

--- a/kubernetes/apps/oci/security/cert-manager/app/selfsigned.yaml
+++ b/kubernetes/apps/oci/security/cert-manager/app/selfsigned.yaml
@@ -16,7 +16,7 @@ spec:
   commonName: selfsigned-ca
   isCA: true
   issuerRef:
-    kind: Issuer
+    kind: ClusterIssuer
     name: selfsigned
   privateKey:
     algorithm: RSA
