--- a/kubernetes/apps/base/security/external-secrets/app/certificate.yaml
+++ b/kubernetes/apps/base/security/external-secrets/app/certificate.yaml
@@ -3,10 +3,19 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: bitwarden-signed-issuer
+  name: bitwarden-tls-certs
 spec:
-  isCA: true
+  dnsNames:
+    - bitwarden-sdk-server.security.svc.cluster.local
+    - localhost
+  ipAddresses:
+    - 127.0.0.1
+    - ::1
   issuerRef:
     kind: ClusterIssuer
-    name: bitwarden-selfsigned
-  secretName: bitwarden-selfsigned-issuer
+    name: ca
+  privateKey:
+    algorithm: RSA
+    encoding: PKCS8
+    size: 2048
+  secretName: bitwarden-tls-certs
