--- a/kubernetes/clusters/oci/secrets/cluster-secrets.sops.yaml
+++ b/kubernetes/clusters/oci/secrets/cluster-secrets.sops.yaml
@@ -4,6 +4,8 @@ metadata:
   name: cluster-secrets
   namespace: flux-system
 stringData:
+  CLUSTER_BITWARDEN_ORGANIZATION_ID: ENC[AES256_GCM,data:wHU/gdMbRAGIGHBSxlWgDDPjEvlGL83UUp8JBXwItAlcXI7K,iv:q5dBjW6Qd8ikhN0I6kQH2gZQ6Pib8v+m7CkPZkxAJAY=,tag:p0oitdFwLZc4bqqP4G6hZQ==,type:str]
+  CLUSTER_BITWARDEN_PROJECT_ID: ENC[AES256_GCM,data:axuVd+TOCmPRKl4CPnZ7OvFMafkq3IHamX269/Ccj267YHWi,iv:anFJWVTxptmCVpFbY36+9QMI1dDcoRqevVL7dAxHamc=,tag:Xzo+swgO87Pb6lSt3j3WLg==,type:str]
   CLUSTER_DOMAIN: ENC[AES256_GCM,data:eDoh5lvZkA0xlgOXrIWH6Q==,iv:gSe2Tyz7RWnOJgeb4vlWQtN5McvB4Qt9lJN6IdX3AW4=,tag:8x0MTgBcmX5bITncVAuZrQ==,type:str]
   CLUSTER_DOMAIN_SLUG: ENC[AES256_GCM,data:OIYz7OdkQqCqWH4MkLLjOg==,iv:4bDqI2WCRWylqjx6cbAEGBgzkKVn/gMrJ2LJWNvG688=,tag:rTaIW/8TTwr8ALOoHe+9bw==,type:str]
   CLUSTER_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:g2u89g==,iv:TQkxzkGOoVjZJHXUivg/IkFSdn1tOWMMwoadW3LIuJg=,tag:VqVqwAqTwmhiiHMM8Q9pyA==,type:str]
@@ -19,8 +21,8 @@ sops:
         MVpNYkRUeG9SdWtVRmZ3YTMvZXRYRDAKjtOYhjfdMHMz1/dOO5sQbzS6okDijQM+
         zP9YB1V9PauDMO4Aha6gHJFWRmEfA442btwKqz/FV+72H+ybj4sj/Q==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-06-01T12:23:57Z"
-  mac: ENC[AES256_GCM,data:OHdftblz2wH3Qhw7iuibHXThOR4RGCtGg55WlDj4au/qiL0nQO0wjPARKVLJO2/DfZZh9VqjbrEdhUroZUD5jsXvWdnyLuNkejUN4e97B5CIdd2/J4NlmWuf0oZ9dFPp7nyx+Awh0+w6b3n2ED29FKzCthUpLSbD5V8ZKael5Lg=,iv:w4jRRznBjgDwJVV95FcNYnZmtRysrR9cq9dfPJG0YLY=,tag:9VPyrXtm1Ffr/LNpNw7Pow==,type:str]
+  lastmodified: "2025-06-02T11:14:07Z"
+  mac: ENC[AES256_GCM,data:r1bkIbqBMEid75eSUfkbwR3hSMAq7tYr6zAAwdWvhkv6iz7k6NxSb0XEFqxZE3i0mcfCFr2YkY4FARUk4FDpD1G8HLHHAt76Vc6PAqlOWZt2XtV0EI74iTSm1b6XpB3WVSP2tl5aVMpStIBs4z+N57CloZ2Kd7+nPn8GMk6nWdY=,iv:ukHanoHiE0K0PDA80oIjEBg0XMz18ecp8woX1+R/DuY=,tag:xpeWEIaznAHeux75diRwtg==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.10.2
