explicitly specified namespace for bitwarden auth credentials secret

--- a/kubernetes/apps/base/security/external-secrets/store/clustersecretstore.yaml
+++ b/kubernetes/apps/base/security/external-secrets/store/clustersecretstore.yaml
@@ -12,5 +12,6 @@ spec:
           credentials:
             key: access-token
             name: bitwarden
+            namespace: security
       organizationID: ${CLUSTER_BITWARDEN_ORGANIZATION_ID}
       projectID: ${CLUSTER_BITWARDEN_PROJECT_ID}
