added self signed ceritificate to cluster secret store

--- a/kubernetes/apps/base/security/external-secrets/store/clustersecretstore.yaml
+++ b/kubernetes/apps/base/security/external-secrets/store/clustersecretstore.yaml
@@ -13,5 +13,10 @@ spec:
             key: access-token
             name: bitwarden
             namespace: security
+      caProvider:
+        key: ca.crt
+        name: bitwarden-tls-certs
+        namespace: security
+        type: Secret
       organizationID: ${CLUSTER_BITWARDEN_ORGANIZATION_ID}
       projectID: ${CLUSTER_BITWARDEN_PROJECT_ID}
