explicitly specified bitwarden sdk server service url

--- a/kubernetes/apps/base/security/external-secrets/store/clustersecretstore.yaml
+++ b/kubernetes/apps/base/security/external-secrets/store/clustersecretstore.yaml
@@ -13,6 +13,7 @@ spec:
             key: access-token
             name: bitwarden
             namespace: security
+      bitwardenServerSDKURL: https://bitwarden-sdk-server.security.svc.cluster.local:9998
       caProvider:
         key: ca.crt
         name: bitwarden-tls-certs
