--- a/kubernetes/clusters/oci/flux-system/flux-operator/ks.yaml
+++ b/kubernetes/clusters/oci/flux-system/flux-operator/ks.yaml
@@ -6,13 +6,14 @@ metadata:
   name: flux-operator
   namespace: flux-system
 spec:
-  interval: 30m
+  interval: 1h
   path: ./kubernetes/clusters/oci/flux-system/flux-operator/app
   prune: true
-  retryInterval: 1m
+  retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  timeout: 3m
-  wait: true
+  targetNamespace: flux-system
+  timeout: 5m
+  wait: false
