--- a/kubernetes/apps/base/database/cloudnative-pg/app/helmrelease.yaml
+++ b/kubernetes/apps/base/database/cloudnative-pg/app/helmrelease.yaml
@@ -1,4 +1,14 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrepository-source-v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: HelmRepository
+metadata:
+  name: cloudnative-pg
+  namespace: database
+spec:
+  interval: 5m
+  url: https://cloudnative-pg.github.io/charts
+---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -11,7 +21,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: cloudnative-pg
-        namespace: flux-system
+        namespace: database
       version: 0.24.0
   install:
     remediation:
