--- a/kubernetes/apps/base/network/envoy-gateway/app/helmrelease.yaml
+++ b/kubernetes/apps/base/network/envoy-gateway/app/helmrelease.yaml
@@ -1,4 +1,19 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/ocirepository-source-v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
+metadata:
+  name: gateway-helm
+  namespace: network
+spec:
+  interval: 5m
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 1.4.0
+  url: oci://docker.io/envoyproxy/gateway-helm
+---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -8,7 +23,7 @@ spec:
   chartRef:
     kind: OCIRepository
     name: gateway-helm
-    namespace: flux-system
+    namespace: network
   install:
     remediation:
       retries: -1
