--- a/kubernetes/apps/base/network/envoy-gateway/gateway/external.yaml
+++ b/kubernetes/apps/base/network/envoy-gateway/gateway/external.yaml
@@ -11,7 +11,6 @@ spec:
   infrastructure:
     annotations:
       external-dns.alpha.kubernetes.io/hostname: *hostname
-      io.cilium/lb-ipam-ips: ${CLUSTER_LB_EXTERNAL_GATEWAY_IP}
   listeners:
     - allowedRoutes:
         namespaces:
@@ -30,4 +29,4 @@ spec:
       tls:
         certificateRefs:
           - kind: Secret
-            name: '${CLUSTER_DOMAIN_SLUG}-tls'
+            name: '${CLUSTER_DOMAIN/./-}-tls'
