--- a/kubernetes/apps/base/network/external-dns/aws/helmrelease.yaml
+++ b/kubernetes/apps/base/network/external-dns/aws/helmrelease.yaml
@@ -1,10 +1,19 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrepository-source-v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: HelmRepository
+metadata:
+  name: external-dns-aws
+  namespace: network
+spec:
+  interval: 5m
+  url: https://kubernetes-sigs.github.io/external-dns
+---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: external-dns-aws
-  namespace: network
 spec:
   chart:
     spec:
@@ -12,7 +21,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: external-dns
-        namespace: flux-system
+        namespace: network
       version: 1.16.1
   install:
     remediation:
