--- a/kubernetes/apps/base/storage/openebs/app/helmrelease.yaml
+++ b/kubernetes/apps/base/storage/openebs/app/helmrelease.yaml
@@ -1,4 +1,14 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrepository-source-v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: HelmRepository
+metadata:
+  name: openebs
+  namespace: storage
+spec:
+  interval: 1h
+  url: https://openebs.github.io/openebs
+---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -11,7 +21,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: openebs
-        namespace: flux-system
+        namespace: storage
       version: 4.2.0
   install:
     remediation:
