--- a/kubernetes/apps/oci/database/cloudnative-pg/ks.yaml
+++ b/kubernetes/apps/oci/database/cloudnative-pg/ks.yaml
@@ -4,33 +4,31 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: cloudnative-pg
-  namespace: database
 spec:
-  interval: 30m
+  interval: 1h
   path: ./kubernetes/apps/base/database/cloudnative-pg/app
   prune: true
-  retryInterval: 1m
+  retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  timeout: 3m
-  wait: true
+  timeout: 5m
+  wait: false
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: cloudnative-pg-cluster
-  namespace: database
 spec:
-  interval: 30m
+  interval: 1h
   path: ./kubernetes/apps/base/database/cloudnative-pg/cluster
   prune: true
-  retryInterval: 1m
+  retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  timeout: 3m
-  wait: true
+  timeout: 5m
+  wait: false
