--- a/kubernetes/apps/oci/flux-system/addons/ks.yaml
+++ b/kubernetes/apps/oci/flux-system/addons/ks.yaml
@@ -3,16 +3,15 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: openebs
-  namespace: storage
+  name: addons
 spec:
-  interval: 30m
-  path: ./kubernetes/apps/base/storage/openebs/app
+  interval: 1h
+  path: ./kubernetes/apps/base/flux-system/addons
   prune: true
-  retryInterval: 1m
+  retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  timeout: 3m
-  wait: true
+  timeout: 5m
+  wait: false
