--- a/kubernetes/apps/oci/kube-system/kustomization.yaml
+++ b/kubernetes/apps/oci/kube-system/kustomization.yaml
@@ -2,6 +2,9 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: network
+namespace: kube-system
 resources:
-  - helmrelease.yaml
+  - namespace.yaml
+  - cilium/ks.yaml
+  - metrics-server/ks.yaml
+  - reflector/ks.yaml
