--- a/kubernetes/apps/oci/network/envoy-gateway/ks.yaml
+++ b/kubernetes/apps/oci/network/envoy-gateway/ks.yaml
@@ -4,33 +4,31 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: envoy-gateway
-  namespace: network
 spec:
-  interval: 30m
-  path: ./kubernetes/apps/oci/network/envoy-gateway/app
+  interval: 1h
+  path: ./kubernetes/apps/base/network/envoy-gateway/app
   prune: true
-  retryInterval: 1m
+  retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  timeout: 3m
-  wait: true
+  timeout: 5m
+  wait: false
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: envoy-gateway-gateway
-  namespace: network
 spec:
-  interval: 30m
-  path: ./kubernetes/apps/oci/network/envoy-gateway/gateway
+  interval: 1h
+  path: ./kubernetes/apps/base/network/envoy-gateway/gateway
   prune: true
-  retryInterval: 1m
+  retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  timeout: 3m
-  wait: true
+  timeout: 5m
+  wait: false
