--- a/kubernetes/apps/oci/security/cert-manager/ks.yaml
+++ b/kubernetes/apps/oci/security/cert-manager/ks.yaml
@@ -4,17 +4,16 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: cert-manager
-  namespace: security
   labels:
     decryption.flux/enabled: true
 spec:
-  interval: 30m
-  path: ./kubernetes/apps/oci/security/cert-manager/app
+  interval: 1h
+  path: ./kubernetes/apps/base/security/cert-manager/app
   prune: true
-  retryInterval: 1m
+  retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  timeout: 3m
-  wait: true
+  timeout: 5m
+  wait: false
