--- a/kubernetes/apps/oci/storage/kustomization.yaml
+++ b/kubernetes/apps/oci/storage/kustomization.yaml
@@ -4,4 +4,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: storage
 resources:
-  - ./democratic-csi/ks.yaml
+  - namespace.yaml
+  - democratic-csi/ks.yaml
+  - openebs/ks.yaml
