--- a/kubernetes/apps/oci/storage/openebs/ks.yaml
+++ b/kubernetes/apps/oci/storage/openebs/ks.yaml
@@ -3,10 +3,10 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cilium
+  name: openebs
 spec:
   interval: 1h
-  path: ./kubernetes/apps/base/kube-system/cilium/app
+  path: ./kubernetes/apps/base/storage/openebs/app
   prune: true
   retryInterval: 2m
   sourceRef:
