--- a/kubernetes/apps/oci/storage/democratic-csi/ks.yaml
+++ b/kubernetes/apps/oci/storage/democratic-csi/ks.yaml
@@ -13,5 +13,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  targetNamespace: storage
   timeout: 5m
   wait: false
