updated democratic-csi oci namespace

--- a/kubernetes/apps/base/storage/democratic-csi/app/helmrelease.yaml
+++ b/kubernetes/apps/base/storage/democratic-csi/app/helmrelease.yaml
@@ -4,6 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: OCIRepository
 metadata:
   name: democratic-csi
+  namespace: storage
 spec:
   interval: 5m
   layerSelector:
@@ -22,6 +23,7 @@ spec:
   chartRef:
     kind: OCIRepository
     name: democratic-csi
+    namespace: storage
   install:
     remediation:
       retries: -1
