--- a/kubernetes/apps/oci/database/cloudnative-pg/ks.yaml
+++ b/kubernetes/apps/oci/database/cloudnative-pg/ks.yaml
@@ -3,8 +3,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cloudnative-pg
+  name: &app cloudnative-pg
 spec:
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/base/database/cloudnative-pg/app
   prune: true
@@ -13,6 +16,7 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  targetNamespace: database
   timeout: 5m
   wait: false
 ---
@@ -20,8 +24,11 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cloudnative-pg-cluster
+  name: &app cloudnative-pg-cluster
 spec:
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/base/database/cloudnative-pg/cluster
   prune: true
@@ -30,5 +37,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  targetNamespace: database
   timeout: 5m
   wait: false
