--- a/kubernetes/apps/oci/flux-system/addons/ks.yaml
+++ b/kubernetes/apps/oci/flux-system/addons/ks.yaml
@@ -3,8 +3,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: addons
+  name: &app addons
 spec:
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/base/flux-system/addons
   prune: true
@@ -13,5 +16,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  targetNamespace: flux-system
   timeout: 5m
   wait: false
