--- a/kubernetes/apps/oci/kube-system/metrics-server/ks.yaml
+++ b/kubernetes/apps/oci/kube-system/metrics-server/ks.yaml
@@ -3,8 +3,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: metrics-server
+  name: &app metrics-server
 spec:
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/base/kube-system/metrics-server/app
   prune: true
@@ -13,5 +16,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  targetNamespace: kube-system
   timeout: 5m
   wait: false
