--- a/kubernetes/apps/oci/network/envoy-gateway/ks.yaml
+++ b/kubernetes/apps/oci/network/envoy-gateway/ks.yaml
@@ -3,8 +3,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: envoy-gateway
+  name: &app envoy-gateway
 spec:
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/base/network/envoy-gateway/app
   prune: true
@@ -13,6 +16,7 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  targetNamespace: network
   timeout: 5m
   wait: false
 ---
@@ -20,8 +24,11 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: envoy-gateway-gateway
+  name: &app envoy-gateway-gateway
 spec:
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/base/network/envoy-gateway/gateway
   prune: true
@@ -30,5 +37,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  targetNamespace: network
   timeout: 5m
   wait: false
