--- a/kubernetes/apps/oci/network/external-dns/ks.yaml
+++ b/kubernetes/apps/oci/network/external-dns/ks.yaml
@@ -3,10 +3,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: external-dns-aws
+  name: &app external-dns-aws
   labels:
     decryption.flux/enabled: true
 spec:
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/base/network/external-dns/aws
   prune: true
@@ -15,5 +18,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  targetNamespace: network
   timeout: 5m
   wait: false
