--- a/kubernetes/apps/oci/security/cert-manager/ks.yaml
+++ b/kubernetes/apps/oci/security/cert-manager/ks.yaml
@@ -3,10 +3,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cert-manager
+  name: &app cert-manager
   labels:
     decryption.flux/enabled: true
 spec:
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/base/security/cert-manager/app
   prune: true
@@ -15,5 +18,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  targetNamespace: security
   timeout: 5m
   wait: false
