--- a/kubernetes/apps/oci/storage/democratic-csi/ks.yaml
+++ b/kubernetes/apps/oci/storage/democratic-csi/ks.yaml
@@ -3,8 +3,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: democratic-csi
+  name: &app democratic-csi
 spec:
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/base/storage/democratic-csi/app
   prune: true
