--- a/kubernetes/apps/oci/storage/openebs/ks.yaml
+++ b/kubernetes/apps/oci/storage/openebs/ks.yaml
@@ -3,8 +3,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: openebs
+  name: &app openebs
 spec:
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/base/storage/openebs/app
   prune: true
@@ -13,5 +16,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  targetNamespace: storage
   timeout: 5m
   wait: false
