fixed external-dns-aws helm repository reference

--- a/kubernetes/apps/base/network/external-dns/aws/helmrelease.yaml
+++ b/kubernetes/apps/base/network/external-dns/aws/helmrelease.yaml
@@ -19,7 +19,7 @@ spec:
       chart: external-dns
       sourceRef:
         kind: HelmRepository
-        name: external-dns
+        name: external-dns-aws
       version: 1.16.1
   install:
     remediation:
