--- a/kubernetes/apps/oci/flux-system/kustomization.yaml
+++ b/kubernetes/apps/oci/flux-system/kustomization.yaml
@@ -6,5 +6,5 @@ components:
   - ../../../components/common
 namespace: flux-system
 resources:
-  - namespace.yaml
+  # - namespace.yaml
   - addons/ks.yaml
